# movel_seirios_msgs

./: .gitignore  .gitlab-ci.yml  README.md  debian.cmake  devel_Dockerfile  ros_dep_install.txt  seirios_release.yml  staging_arm64_Dockerfile  staging_x86_Dockerfile
fbsm/: CMakeLists.txt  package.xml
fbsm/include/fbsm/: line.h  line_extraction_ros.h  utilities.h
fbsm/src/: feature_description.cpp  line_extraction_ros.cpp
src/automapping_handler/: CMakeLists.txt  README.md  automapping_handler_plugins.xml  package.xml
src/automapping_handler/config/: explore.yaml
src/automapping_handler/include/automapping_handler/: automapping_handler.h
src/automapping_handler/launch/: automapping.launch  move_base_automap.launch
src/automapping_handler/src/: automapping_handler.cpp
src/broadcast_pose/: CMakeLists.txt  envconfig.cfgx  package.xml
src/broadcast_pose/debian/: changelog  control  postinst  rules
src/broadcast_pose/launch/: broadcast_pose.launch
src/broadcast_pose/src/: broadcast_pose.cpp
src/cart_footprint_publisher/: CMakeLists.txt  package.xml
src/cart_footprint_publisher/config/: cart_footprint_publisher.yaml
src/cart_footprint_publisher/include/cart_footprint_publisher/: cart_footprint_publisher.h  common.h
src/cart_footprint_publisher/launch/: cart_footprint_publisher.launch
src/cart_footprint_publisher/src/: cart_footprint_publisher.cpp  cart_footprint_publisher_node.cpp
src/cmd_vel_mux/: CMakeLists.txt  envconfig.cfgx  local_rosdep.yaml  package.xml
src/cmd_vel_mux/config/: cmd_vel_mux.yaml
src/cmd_vel_mux/debian/: changelog  control  postinst  rules
src/cmd_vel_mux/include/cmd_vel_mux/: cmd_vel_mux.h  speed_limit_zones.h
src/cmd_vel_mux/launch/: cmd_vel_mux.launch
src/cmd_vel_mux/src/: cmd_vel_mux.cpp  speed_limit_zones.cpp
src/cmd_vel_mux/tests/: draw_one_zone.py  test_limit_speed.py
src/correlative_scan_matcher/: CMakeLists.txt  README.md  package.xml
src/correlative_scan_matcher/include/correlative_scan_matcher/: probability_grid.h  range_routines.h  real_time_csm_node.h
src/correlative_scan_matcher/launch/: rack_correction.launch  real_time_csm.launch
src/correlative_scan_matcher/src/: probability_grid.cpp  range_routines.cpp  real_time_csm_node.cpp
src/correlative_scan_matcher/srv/: SetMap.srv
src/cpu_monitor/: CMakeLists.txt
src/cpu_monitor/config/: cpu_monitor.yaml
src/cpu_monitor/launch/: cpu_monitor.launch
src/curb_edges_detection/: CMakeLists.txt  README.md  package.xml
src/curb_edges_detection/config/: curb_edges_detection.yaml  velocity_adjuster.yaml
src/curb_edges_detection/launch/: curb_detection.launch
src/curb_edges_detection/src/: \  base_link_flattener.cpp  curb_edges_detection.cpp  curb_edges_detection_node.cpp  max_velocity_adjuster.cpp
src/custom_logger/: CMakeLists.txt  package.xml
src/custom_logger/include/custom_logger/: logger.h
src/dafan_docking/: CMakeLists.txt  README.md  package.xml
src/dafan_docking/april_tags_images/: 200by200_april.xcf  APRIL_30mm_35mm.xcf  APRIL_50mm_55mm.xcf  bundle_4_42mm.xcf  bundle_6_42mm.xcf  bundle_7_42mm.xcf
src/dafan_docking/calib_scripts/: calibrate_bundle.m
src/dafan_docking/cfg/: april_docking.cfg  orientate_plane.cfg  planner_adjuster.cfg
src/dafan_docking/config/: april_tags.yaml  phase0_pre_docking.yaml  phase1_april_docking.yaml  phase2_orientate_plane.yaml  planner_adjuster.yaml
src/dafan_docking/launch/: calibration.launch  dafan_docking.launch  dafan_docking_handled.launch  phase0_debug.launch  phase1_debug.launch  phase2_debug.launch
src/dafan_docking/src/: april_docking.cpp  orientate_plane.cpp  planner_adjuster.cpp  pre_docking.cpp  simple_pid.cpp
src/dafan_docking/srv/: ToggleDocking.srv
src/dafan_msgs/: CMakeLists.txt  package.xml
src/dafan_msgs/cfg/: device_attributes.cfg
src/dafan_msgs/msg/: BatteryStatus.msg  Motor.msg  RobotStatus.msg  SonarScan.msg  SonarThreshold.msg  SwitchStatus.msg  ToggleStatus.msg
src/dafan_msgs/srv/: ToggleDevices.srv
src/dalu_docking/: CMakeLists.txt  README.md  package.xml
src/dalu_docking/config/: april_tags.yaml  april_tags_charging.yaml  dalu_docking.yaml  diff_drive_charging.yaml  diff_drive_docking.yaml  diff_drive_docking_pose.yaml  diff_drive_docking_single_phase.yaml  pose_offset1.yaml  tag_offset.yaml  tag_offset_charging.yaml
src/dalu_docking/launch/: diff_drive_charging.launch  diff_drive_docking.launch  diff_drive_docking_pose1.launch  diff_drive_docking_pose2.launch  diff_drive_docking_pose3.launch  diff_drive_docking_single_phase.launch
src/dalu_docking/src/: dalu_docking.cpp  diff_drive_docking.cpp  pose_offset.cpp  tag_offset.cpp  tag_offset_plus.cpp
src/docking_handler/: CMakeLists.txt  README.md  docking_handler_plugins.xml  package.xml
src/docking_handler/config/: task_supervisor.yaml
src/docking_handler/src/: docking_handler.cpp
src/dynamic_obstacle_layer/: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
src/dynamic_obstacle_layer/cfg/: DynamicPlugin.cfg
src/dynamic_obstacle_layer/src/: dynamic_obstacle_layer.cpp
src/external_process_handler/: CMakeLists.txt  README.md  external_process_handler_plugins.xml  package.xml
src/external_process_handler/config/: task_supervisor.yaml
src/external_process_handler/src/: external_process_handler.cpp
src/fbsm/: CMakeLists.txt  fbsm.yaml  package.xml
src/fbsm/cmake/: cxxStandard.cmake
src/fbsm/debian/: changelog  control  postinst  rules
src/fbsm/launch/: fbsm.launch
src/fbsm/src/: feature_description.cpp  line.cpp  line_extraction.cpp  line_extraction_node.cpp  line_extraction_ros.cpp
src/geometric_docking/: CMakeLists.txt  readme.md
src/geometric_docking/config/: geometric_docking.yaml
src/geometric_docking/launch/: geodock.launch  geometric_docking.launch
src/geometric_docking/src/: dock_detector.cpp  geometric_docker.cpp  geometric_docker_node.cpp
src/hardware_status/: CMakeLists.txt  README.md  package.xml
src/hardware_status/config/: hardware_status.yaml
src/hardware_status/launch/: hardware_status.launch
src/hardware_status/src/: hardware_status.cpp
(+2485 files in other folders)
