<?xml version="1.0"?>
<package format="2">
  <name>broadcast_pose</name>
  <version>1.0.0</version>
  <description>The broadcast_pose package</description>
  <maintainer email="contact@movel.ai">Movel AI</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

</package>
