<?xml version="1.0"?>
<package format="2">
  <name>cmd_vel_mux</name>
  <version>1.0.0</version>
  <description>The guidance package</description>
  <maintainer email="contact@movel.ai">Movel AI</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>ros_utils</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>movel_seirios_msgs</depend>
  <depend>movel_hasp_vendor</depend>

</package>
