<?xml version="1.0"?>
<package format="2">
  <name>correlative_scan_matcher</name>
  <version>1.0.0</version>
  <description>The correlative_scan_matcher package</description>
  <maintainer email="contact@movel.ai">Movel AI</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>movel_hasp_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>laser_geometry</depend>
  <depend>boost</depend>

</package>
