<?xml version="1.0"?>
<package format="2">
  <name>curb_edges_detection</name>
  <version>0.0.0</version>
  <description>The curb_edges_detection package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="iris@movel.ai">iris</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <build_depend>message_generation</build_depend> 
  <build_export_depend>message_generation</build_export_depend>
 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>ros_utils</depend>
  <depend>movel_hasp_vendor</depend>
  <depend>movel_seirios_msgs</depend>

  <export>
   </export>
</package>
