<?xml version="1.0"?>
<package format="2">
  <name>custom_logger</name>
  <version>1.0.0</version>
  <description>The custom_logger package</description>
  <maintainer email="contact@movel.ai">Movel AI</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>boost</depend>

</package>
